--- a/src/components/Form.module.css
+++ b/src/components/Form.module.css
@@ -1,57 +1,103 @@
-.form {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-gap: 10px;
-    padding: 20px;
+.details{
+  position: relative;
 }
 
+.details_btn_back{
+  position: absolute;
+  right: 0;
+  top: 10px;
+  cursor: pointer;
+  font-size: 20px;
+  color: red;
+  font-weight: 600;
+  padding: 10px;
+  background-color: lightyellow;
+}
+
+h2 {
+  font-size: 24px;
+  margin: 30px 10px 30px;
+}
+
+.form{
+  border-top: 1px solid grey;
+  border-bottom: 1px solid grey;
+}
+
+.form_list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.form__item {
+  flex-basis: 500px;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 30px;
+}
+
+.form_btn{
+  font-size: 20px;
+  padding: 10px;
+  margin-bottom: 20px;
+  border: 1px solid black;
+  border-radius: 5px;
+  background-color: aquamarine;
+  font-weight: 700;
+  margin-right: 30px;
+}
+
+
+
+
+
 .formField {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 label {
-    font-size: 14px;
-    font-weight: bold;
-    margin-bottom: 5px;
+  font-size: 20px;
+  font-weight: bold;
+  margin-bottom: 5px;
 }
 
 input {
-    height: 30px;
-    padding: 5px;
-    border-radius: 5px;
-    border: 1px solid #ccc;
-    background-color: aliceblue;
+  height: 50px;
+  padding: 5px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  background-color: aliceblue;
+  font-size: 16px;
 }
 
-h4 {
-    margin-left: 20px;
-}
+
 
 .button {
-    position: absolute;
-    top: 2%;
-    right: 2%;
-    background-color: burlywood;
-    border-radius: 3px;
+  position: absolute;
+  top: 2%;
+  right: 2%;
+  background-color: burlywood;
+  border-radius: 3px;
 }
 
 .button2 {
-    position: relative;
-    height: 30px;
-    width: 100px;
-    left: 1.5%;
-    background-color: lightpink;
-    border-radius: 3px;
-    font-weight: bold;
+  position: relative;
+  height: 30px;
+  width: 100px;
+  left: 1.5%;
+  background-color: lightpink;
+  border-radius: 3px;
+  font-weight: bold;
 }
 
 .button3 {
-    position: relative;
-    height: 30px;
-    width: 100px;
-    right: 80%;
-    background-color: aquamarine;
-    border-radius: 3px;
-    font-weight: bold;
+  position: relative;
+  height: 30px;
+  width: 100px;
+  right: 80%;
+  background-color: aquamarine;
+  border-radius: 3px;
+  font-weight: bold;
 }
