--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,10 @@
-.App {
+.app-wrapper{
+  margin-top: 10px;
+}
+
+.container {
+  max-width: 1240px;
   margin: 0 auto;
-  /* display: grid; */
-  width: 100%;
+  padding-left: 20px;
+  padding-right: 20px;
 }
-
-h4{
-  padding: 30px 0;
-}
-
-
-
