--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -23,6 +23,7 @@ p{
   padding: 10px 0;
   border-bottom: solid 1px #000;
   font-family: 'SuisseIntl', sans-serif;
+  margin-bottom: 30px;
 }
 
 .logo__img {
