--- a/src/components/Table.module.css
+++ b/src/components/Table.module.css
@@ -1,6 +1,29 @@
+.loaded p {
+  font-size: 18px;
+  font-weight: 700;
+  margin-bottom: 30px;
+}
+
+.errorNoData {
+  color: red;
+  font-weight: 700;
+}
+
+.fromFile {
+  color: blue;
+}
+
+.fromServer {
+  color: green;
+}
+
+
+
 .table {
+  /* display: block; */
     width: 100%;
     border: none;
+    border-radius: 8px;
     margin-bottom: 20px;
 }
 .table thead th {
@@ -12,10 +35,10 @@
     font-size: 13px;
 }
 .table thead tr th:first-child {
-    border-radius: 8px 0 0 8px;
+    /* border-radius: 8px 0 0 8px; */
 }
 .table thead tr th:last-child {
-    border-radius: 0 8px 8px 0;
+    /* border-radius: 0 8px 8px 0; */
 }
 .table tbody td {
     text-align: left;
@@ -28,7 +51,7 @@
     background: #f3f3f3;
 }
 .table tbody tr td:first-child {
-    border-radius: 8px 0 0 8px;
+    /* border-radius: 8px 0 0 8px; */
 }
 
 table td:nth-of-type(2) {
@@ -41,8 +64,7 @@ table td:nth-of-type(5) {
 
 
 .table tbody tr td:last-child {
-    border-radius: 0 8px 8px 0;
-    width:8%;
+    width:11%;
 }
 
 .table button {
