--- a/src/components/Table.module.css
+++ b/src/components/Table.module.css
@@ -17,79 +17,82 @@
   color: green;
 }
 
-
-
 .table {
-  /* display: block; */
-    width: 100%;
-    border: none;
-    border-radius: 8px;
-    margin-bottom: 20px;
+  width: 100%;
+  border: none;
+  border-radius: 5px;
+  overflow: hidden;
+  margin-bottom: 20px;
 }
+
 .table thead th {
-    font-weight: bold;
-    text-align: left;
-    border: none;
-    padding: 10px 15px;
-    background: #d8d8d8;
-    font-size: 13px;
+  font-weight: bold;
+  text-align: left;
+  border: none;
+  padding: 10px 15px;
+  background: #d8d8d8;
+  font-size: 14px;
+  vertical-align: middle;
+  text-transform: uppercase;
 }
-.table thead tr th:first-child {
-    /* border-radius: 8px 0 0 8px; */
-}
-.table thead tr th:last-child {
-    /* border-radius: 0 8px 8px 0; */
-}
+
+
 .table tbody td {
-    text-align: left;
-    border: none;
-    padding: 10px 15px;
-    font-size: 13px;
-    vertical-align: top;
-}
-.table tbody tr:nth-child(even){
-    background: #f3f3f3;
-}
-.table tbody tr td:first-child {
-    /* border-radius: 8px 0 0 8px; */
+  text-align: left;
+  border: none;
+  padding: 15px;
+  font-size: 14px;
+  vertical-align: middle;
 }
 
-table td:nth-of-type(2) {
-    width:8%;
+.table tbody tr:nth-child(even) {
+  background: #f3f3f3;
 }
 
-table td:nth-of-type(5) {
-    width:4%;
+table tr td:first-child {
+  width: 15%;
+}
+
+table tr td:nth-child(2) {
+  width: 8%;
+}
+
+table tr td:nth-child(4) {
+  width: 19%;
+}
+
+table tr td:nth-child(5) {
+  width: 7%;
 }
 
 
 .table tbody tr td:last-child {
-    width:11%;
+  width: 11%;
 }
 
+
 .table button {
-    border: none;
-    border-radius: 4px 4px 4px 4px;
-    color: white;
-    padding: 4px 15px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 14px;
-    margin: 4px 1px;
-    cursor: pointer;
+  border: 1px solid black;
+  border-radius: 4px;
+  padding: 4px 15px;
 }
 
 .table button:first-child {
-    background-color: deepskyblue;
+  background-color: deepskyblue;
 }
 
 .table button:last-child {
-    background-color: #f44336;
-    margin-left: 8%;
+  background-color: #f44336;
 }
 
 .table img {
-    width: 12px;
-    height: 12px;
+  width: 12px;
+  height: 12px;
+}
+
+.table_btns {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
 }
