--- a/src/components/Form.module.css
+++ b/src/components/Form.module.css
@@ -17,17 +17,17 @@
 h2 {
   font-size: 24px;
   margin: 30px 10px 30px;
+  text-transform: uppercase;
 }
 
 label {
   font-size: 20px;
   font-weight: bold;
-  margin-bottom: 5px;
+  margin-bottom: 10px;
 }
 
 input {
-  height: 50px;
-  padding: 5px;
+  padding: 10px 15px;
   border-radius: 5px;
   border: 1px solid #ccc;
   background-color: aliceblue;
@@ -48,7 +48,7 @@ input {
 }
 
 .form__list_item {
-  flex-basis: 500px;
+  flex-basis: 550px;
   display: flex;
   flex-direction: column;
   margin-bottom: 30px;
