--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,17 @@
-.app-wrapper{
-  margin-top: 10px;
+html,
+body,
+#root {
+  height: 100%;
+}
+
+.app-wrapper {
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
+}
+
+.main {
+  flex: 1;
 }
 
 .container {
