--- a/src/components/Form.module.css
+++ b/src/components/Form.module.css
@@ -12,6 +12,8 @@
   font-weight: 600;
   padding: 10px;
   background-color: lightyellow;
+  border: 1px solid black;
+  border-radius: 4px;
 }
 
 h2 {
