--- a/src/components/Table.module.css
+++ b/src/components/Table.module.css
@@ -1,3 +1,9 @@
+/* .loaded{
+  padding: 100;
+  margin: 0;
+} */
+
+
 .loaded p {
   font-size: 18px;
   font-weight: 700;
@@ -15,6 +21,27 @@
 
 .fromServer {
   color: green;
+}
+
+.loadedTextAndBotton {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.add_data {
+  cursor: pointer;
+  color: inherit;
+  text-decoration: none;
+  font-size: 18px;
+  font-weight: 700;
+  /* padding: 4px 15px; */
+  color: #f44336;
+  border: 1px solid black;
+  padding: 10px;
+  background-color: lightyellow;
+  border-radius: 4px;
+  margin-bottom: 30px;
 }
 
 .table {
