--- a/src/components/Table.module.css
+++ b/src/components/Table.module.css
@@ -1,8 +1,3 @@
-/* .loaded{
-  padding: 100;
-  margin: 0;
-} */
-
 
 .loaded p {
   font-size: 18px;
@@ -23,26 +18,6 @@
   color: green;
 }
 
-.loadedTextAndBotton {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.add_data {
-  cursor: pointer;
-  color: inherit;
-  text-decoration: none;
-  font-size: 18px;
-  font-weight: 700;
-  /* padding: 4px 15px; */
-  color: #f44336;
-  border: 1px solid black;
-  padding: 10px;
-  background-color: lightyellow;
-  border-radius: 4px;
-  margin-bottom: 30px;
-}
 
 .table {
   width: 100%;
@@ -61,8 +36,8 @@
   font-size: 14px;
   vertical-align: middle;
   text-transform: uppercase;
+  height: 55px;
 }
-
 
 .table tbody td {
   text-align: left;
@@ -76,19 +51,19 @@
   background: #f3f3f3;
 }
 
-table tr td:first-child {
+.table tr td:first-child {
   width: 15%;
 }
 
-table tr td:nth-child(2) {
+.table tr td:nth-child(2) {
   width: 8%;
 }
 
-table tr td:nth-child(4) {
+.table tr td:nth-child(4) {
   width: 19%;
 }
 
-table tr td:nth-child(5) {
+.table tr td:nth-child(5) {
   width: 7%;
 }
 
@@ -122,4 +97,26 @@ table tr td:nth-child(5) {
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
+}
+
+
+.link_and_table{
+  position: relative;
+}
+
+.add_data {
+  cursor: pointer;
+  text-decoration: none;
+  font-size: 18px;
+  font-weight: 700;
+  color: #f44336;
+  border: 1px solid black;
+  padding: 10px;
+  background-color: lightyellow;
+  border-radius: 4px;
+  margin-bottom: 30px;
+  text-transform: none;
+  position: absolute;
+  right: 5px;
+  top: 5px;
 }
